<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_3"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/holo_blue_bright"
        android:backgroundTint="@color/black"
        android:background="@drawable/rounded_corner"
        app:layout_constraintTop_toBottomOf="@id/passwordlayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/emailayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_password"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50.dp"
            android:hint="@string/enter_email"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="410dp"
        android:layout_height="141dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:padding="16sp"
        android:paddingStart="16sp"
        android:paddingTop="16sp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/black"
        android:text="@string/create_account"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/login"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>